kubernetes/apps/neetrack/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: neetrack
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
