kubernetes/apps/neetrack/patch-db-key.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neetrack
spec:
  template:
    spec:
      containers:
        - name: neetrack
