kubernetes/apps/neetrack/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: neetrack
  namespace: neetrack
spec:
  parentRefs:
    - name: vps-gateway
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - "neetrack.robin-vidal.com"
    - "hello.brainer.sh"
  rules:
    - backendRefs:
        - name: neetrack
          port: 8080
